RESOLVED FIXED 265031
Fix build with -DENABLE_GPU_PROCESS=ON in RemoteDisplayListRecorderProxy.cpp
https://bugs.webkit.org/show_bug.cgi?id=265031
Summary Fix build with -DENABLE_GPU_PROCESS=ON in RemoteDisplayListRecorderProxy.cpp
Pablo Saavedra
Reported 2023-11-17 07:10:34 PST
Fix a LOG_CHANNEL_PREFIXRemoteLayerBuffers not declared in this scope
Attachments
Pablo Saavedra
Comment 1 2023-11-17 07:12:18 PST
EWS
Comment 2 2023-11-19 23:52:29 PST
Committed 270963@main (72de7220269b): <https://commits.webkit.org/270963@main> Reviewed commits have been landed. Closing PR #20667 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-19 23:53:14 PST
Note You need to log in before you can comment on or make changes to this bug.