Fix build with -DENABLE_GPU_PROCESS=ON in RemoteDisplayListRecorderProxy.cpp https://bugs.webkit.org/show_bug.cgi?id=265031

Unreviewed build fix.

Trivial fix for a LOG_CHANNEL_PREFIX not declared in this scope.

* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:

Canonical link: https://commits.webkit.org/270963@main